chore: scrollbar and header css fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,17 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+::-webkit-scrollbar-track{
+  background: hsl(var(--background) / 0.8);
+}
+::-webkit-scrollbar-thumb{
+  background: hsl(var(--foreground) / 0.5);
+  border-radius: 0.25rem;
+}
 
 @layer base {
   * {
